Working on GUI (April-29)

--- a/app/src/main/res/layout/activity_generate_group.xml
+++ b/app/src/main/res/layout/activity_generate_group.xml
@@ -51,11 +51,11 @@
                 android:text="@string/btnTrack" />
 
             <Button
-                android:id="@+id/btn"
+                android:id="@+id/btnMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@" />
+                android:text="@string/btnMessage" />
         </LinearLayout>
     </android.support.v4.widget.NestedScrollView>
 
