--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -28,6 +28,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="90dp" />
 
+            <ListView
+                android:id="@+id/messages_view"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:divider="#fff"/>
+
             <EditText
                 android:id="@+id/txtMessage"
                 android:layout_width="match_parent"
