--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -1,5 +1,5 @@
-
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -28,12 +28,33 @@
                 android:layout_width="match_parent"
                 android:layout_height="90dp" />
 
-            <ListView
-                android:id="@+id/messages_view"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2"
-                android:divider="#fff"/>
+            <TextView
+                android:id="@+id/received_message_body"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/name"
+                android:layout_alignStart="@+id/name"
+                android:layout_alignLeft="@+id/name"
+                android:background="@drawable/received_message"
+                android:elevation="21dp"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="26dp"
+                android:paddingEnd="60dp"
+                android:paddingRight="60dp"
+                android:text="@string/receivedTxt"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/sent_message_body"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/message_format"
+                android:elevation="2dp"
+                android:padding="10dp"
+                android:text="Placeholder message"
+                android:textColor="#fff"
+                android:textSize="18dp" />
 
             <EditText
                 android:id="@+id/txtMessage"
