--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -30,28 +30,28 @@
 
             <TextView
                 android:id="@+id/received_message_body"
-                android:layout_width="wrap_content"
+                android:layout_width="395dp"
                 android:layout_height="wrap_content"
                 android:background="@drawable/received_message"
                 android:elevation="21dp"
                 android:paddingHorizontal="16dp"
                 android:paddingVertical="26dp"
                 android:paddingEnd="60dp"
-                android:paddingRight="60dp"
+                android:paddingStart="60dp"
                 android:text="@string/receivedTxt"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                tools:targetApi="o" />
 
             <TextView
                 android:id="@+id/sent_message_body"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
                 android:background="@drawable/message_format"
                 android:elevation="2dp"
                 android:padding="10dp"
-                android:text="Placeholder message"
+                android:text="@string/placeholder_message"
                 android:textColor="#fff"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 />
 
             <EditText
